[package]
name = "omniverse"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"

[dependencies]
glium = "0.22"
alga = "0.5"
nalgebra = "0.14"
ncollide = "0.14"
lazy_static = "1.2"
pretty_env_logger = "0.2"
log = "0.4"
image = "0.18"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
imgui = "0.0.21"
imgui-glium-renderer = "0.0.21"
imgui-glutin-support = "0.0.21"

[lib]
name = "omniverse"
path = "src/lib.rs"